# cpp-course-public24

lectures/lecture10/: .gitignore  README.md  class_task.cpp
lectures/lecture10/containers_iterators/: lecture.ipynb
lectures/lecture10/figure_example/: CMakeLists.txt  Circle.h  IFigure.h  Makefile  Rect.h  Triangle.h  figure_example.cpp
lectures/lecture10/notify_example/: Makefile  example.cpp
lectures/lecture10/vector_path/: Makefile  vector_path.cpp
lectures/lecture11/: lecture.ipynb  rvo.cpp
lectures/lecture11/sources/: CMakeLists.txt  arrays.cpp  auto_ptr.cpp  lifetime.cpp  raw_pointer.cpp  shared_ptr.cpp  smart_ptr.cpp  unique_ptr.cpp  utils.h  weak_ptr.cpp
lectures/lecture12/: README.md  main.cpp
lectures/lecture12/lecture_concurrency_1/: lecture.ipynb
lectures/lecture12/lecture_concurrency_2/: lecture.ipynb
lectures/lecture8/: lecture8_algorithms.ipynb  links.txt
lectures/lecture8/algorithms/: CMakeLists.txt  accumulate.cpp  any_of.cpp  binary_search.cpp  copy.cpp  for_each.cpp  heap.cpp  max.cpp  partititon.cpp  permutation.cpp  remove.cpp  rotate.cpp  sort.cpp  transform.cpp  utils.h
lectures/lecture8/containers/: CMakeLists.txt  array.cpp  deque.cpp  forward_list.cpp  list.cpp  map.cpp  multiset.cpp  queue.cpp  set.cpp  stack.cpp  unordered_set.cpp  vector.cpp
lectures/lecture9/: .gitignore  Makefile  lecture9.ipynb  optional.cpp
tasks/task3/: CMakeLists.txt  README.md  bin_search.hpp  main.cpp
tasks/task3/tests/: test_bin_search.cpp
tasks/task4/: CMakeLists.txt  README.md  main.cpp  template_iterator.hpp  template_vector.hpp
tasks/task4/tests/: test_template_vector.cpp
tasks/task6/: .gitignore  CMakeLists.txt  Makefile  main.cpp  tests.py
